fix spacing on game page for mobile, tablet, and desktop orientations

--- a/style.scss
+++ b/style.scss
@@ -199,6 +199,14 @@ h3{
 		color:$machgrey1;
 	}
 
+	.hiliteButton{
+		background-color:$machgrey1;
+		border-radius:15px;
+	}
+	.hiliteButton:hover a{
+		color:$machgrey2;
+	}
+
 }
 /* splash image items */
 
@@ -350,6 +358,10 @@ h3{
 	background:url('skybg3_mobile.gif') bottom center no-repeat fixed;
 	background-size: cover;
 	z-index:11;
+
+	header{
+
+	}
 }
 
 /*page Splash media items */
@@ -431,8 +443,25 @@ h3{
 		padding-top:2em;
 	}
 
+	.gameSplashGameLogo{
+		position:relative;
+		top:10%;
+		right:0;
+		max-width:180px;
+		height:150px;
+		background: url('dragon_title_mobile.png') center bottom no-repeat;
+		background-size:100% auto;
+		margin: auto;
+		z-index:12;
+		@media only screen and (max-width:768px) and (orientation:landscape){
+			min-width:240px;
+		}
+	}
+
 	.gameSplashContainer{
-		@include vertical-align;
+		@media only screen and (min-width:768px) and (orientation:portrait){
+			@include vertical-align;
+		}
 		text-align:center;
 		display:block;
 	}
@@ -442,7 +471,7 @@ h3{
 		display:inline-block;
 		width:100%;
 		max-width:480px;
-		min-height:200px;
+		min-height:150px;
 		margin:auto;
 		margin-top:1em;
 		background-image: url('meeples_temp.jpg');
@@ -460,10 +489,13 @@ h3{
 			bottom:0;
 			width:calc(100% - 2em);
 			margin:auto;
-			padding:1em;
+			padding:.5em;
 			h3{
 				text-align:center;
-				font-size:1em;
+				font-size:.75em;
+				@media only screen and (max-width:768px) and (orientation:landscape){
+					font-size:1em;
+				}
 			}
 		}
 
@@ -475,6 +507,39 @@ h3{
 			height: 100px;
 			background-position: center;
 			background-size:50%;
+		}
+	}
+
+	@media only screen and (max-width:768px) and (orientation:landscape){
+		.gameSplashMedia{
+			position: absolute;
+			top:35%;
+			right:50%;
+			width:calc(50% - 2.5em);
+			min-height:180px;
+			margin:auto 1em auto auto;
+			background-image: url('meeples_temp.jpg');
+			background-size:cover;
+		}
+
+		.gameSplashMediaAside{
+			position:absolute;
+			top:30%;
+			left:50%;
+			margin-left:.5em;
+
+			.gameSplashQuotes{
+				h3{
+					font-size:.75em;
+				}
+			}
+
+			.gameSplashGameLogo{
+				position:relative;
+				height:80px;
+				background-size:contain;
+				right:0;
+			}
 		}
 	}
 
@@ -518,8 +583,13 @@ h3{
 		.pictureSlider{
 			@include vertical-align;
 			margin: 0 auto;
-			max-width:480px;
-			min-width:240px;
+			max-width:360px;
+			max-height:240px;
+
+			@media only screen and (max-width:768px) and (orientation:landscape){
+				max-width:480px;
+				min-height:320px;
+			}
 
 
 			.pictureSliderArrow{
@@ -560,13 +630,11 @@ h3{
 
 /* about page items */ 
 
-// .aboutSplash{
-// 	background-color: white;
-// 	header, h2, h3, aside{
-// 		color: black !important;	
-// 	}
-	
-// }
+.aboutSplash{
+	header, h2, h3, aside{
+		color: black !important;	
+	}
+}
 
 .machBrosBubbles{
 	margin: 1em auto;
@@ -752,14 +820,6 @@ input, button, textarea{
 		}
 	}
 
-	.menuBar *, .mbLogo, .mbLinks{
-		background-color:rgba(229,230,231,0) !important;
-	}
-
-	.mbTranslucent{
-		// background-color:rgba(229,230,231,0);
-	}
-
 	.mbTranslucent.machgreen{
 		background-color:$machgreen1;
 	}
@@ -890,6 +950,7 @@ input, button, textarea{
 
 	.psAbout{
 		background:url('skybg3_desktop.gif') bottom center no-repeat fixed;
+		background-size:cover;
 	}
 
 	/* page content */
@@ -928,7 +989,22 @@ input, button, textarea{
 	.gameSplash{
 		margin:auto;
 		max-width:768px;
+
+		.gameSplashGameLogo{
+			// position:relative;
+			// // top: 15%;
+			// width:384px;
+			// height:300px;
+			// margin:auto; 
+			// right: 50%;
+			// // right:auto;
+			background: url('dragon_title_desktop.png') center top no-repeat;
+			background-size:contain;
+
+		}
+
 		.gameSplashContainer{
+			@include vertical-align;
 			top:25%;
 			.gameSplashMedia{
 				position: absolute;
@@ -976,7 +1052,7 @@ input, button, textarea{
 			.pictureSlider{
 				max-width:720px;
 				min-width:480px;
-				min-height:420px;
+				min-height:480px;
 
 				.pictureSliderArrow{
 					width: 60px;
